# poly

./: LICENSE
poly/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
poly/core/: CMakeLists.txt  Point.cpp  Point.h  Poly.cpp  Poly.h  PolyViewer.cpp  PolyViewer.h
